# ServerClientProject

Clinet/: CMakeLists.txt
Clinet/src/: client1.cpp
Server/include/: server.h
Server/include/utils/: clientClientCommunication.h  clientInformation.h  currentConnections.h  message.h  serverAdmin.h
Server/src/: server.cpp
Server/src/utils/: clientClientCommunication.cpp  clientInformation.cpp  currentConnections.cpp  message.cpp  serverAdmin.cpp
Server/tests/: CMakeLists.txt  ClientInformationTest  messageTest  testClientInformation.cpp  testMessage.cpp
